# python-evnex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/design/: 113-auth-refactor.md
evnex/: __init__.py  api.py  auth.py  charge_points.py  cli.py  config.py  errors.py  models.py  status.py  user.py
evnex/cli/: __init__.py  _auth.py  _resources.py
evnex/schema/: charge_points.py  commands.py  cost.py  org.py  user.py
evnex/schema/v3/: charge_points.py  commands.py  cost.py  generic.py  locations.py  org.py  relationships.py
examples/: configure_charger_load_management.py  get_charge_point_detail.py  get_org_insights.py  get_token.py  manage_mfa.py  set_charge_point_availability.py
tests/: conftest.py  test_auth.py  test_cli.py  test_cli_resources.py  test_schema.py
