[project]
name = "evnex"
version = "0.4.6"
description = "A Python wrapper for the EVNEX Cloud API"
authors = [{ name = "Brian Thorne", email = "brian@hardbyte.nz" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
urls = { repository = "https://github.com/hardbyte/python-evnex", issues = "https://github.com/hardbyte/python-evnex/issues" }


dependencies = [
    "httpx>=0.23",
    "pycognito>=2023.5.0,<2025",
    "boto3>=1.26,<2.0",
    "pydantic>2.0.0,<3.0.0",
    "tenacity>=8.1,<9.0",
    "pydantic-settings>=2.2,<3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "pytest>7.1,<9.0",
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
